syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.dwh";
option java_outer_classname = "DwhProto";

package dwh;

// Service definition.
service DataWarehouseService {
  rpc TransferWarehouseRecord (WarehouseRecord) returns (TransferReply) {}
}

// Defines Product
message Product {
  string productID = 1;
  string productName = 2;
  int32 quantity = 3;
}

// Warehouse data.
message WarehouseRecord {
  string warehouseID = 1;
  string warehouseName = 2;
  string warehouseAddress = 3;
  string warehousePostalCode = 4;
  string warehouseCity = 5;
  string warehouseCountry = 6;
  string timestamp = 7;
  repeated Product products = 8; // 'repeated' creates a list of Products
}

// Response message
message TransferReply {
  string message = 1;
  bool success = 2;
}